# python-ml-lesson02

./: .gitignore  README.md
BACKEND/backend/: .env.example  main.py  pyproject.toml
BACKEND/backend/config/: mongoDB.py
BACKEND/backend/models/: mlLesson01.py  mlLesson02.py  mlLesson03.py
BACKEND/backend/routes/: mlLesson01.py  mlLesson02.py  mlLesson03.py
FRONTEND/ml-lesson02/: package-lock.json  package.json
